🟥 fix: try to fix hamburger menu to stay at top on mobile

--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -17,9 +17,9 @@
 	align-items: center;
 	list-style-type: none;
 	position: fixed;
-	top: 0px;
-	left: 0px;
-	padding: 50px 30px 30px 0px;
+	top: 0;
+	left: 0;
+	padding: 50px 30px 30px 0;
 	background-image: linear-gradient(
 		to bottom,
 		rgba(0, 0, 0, 0),
@@ -138,7 +138,7 @@
 	}
 
 	label .menu-hamburger {
-		position: absolute;
+		position: fixed;
 		right: -100px;
 		top: -100px;
 		z-index: 100;
